--- a/grc/templates/govuk-design-system-templates/_summary-list-item.html
+++ b/grc/templates/govuk-design-system-templates/_summary-list-item.html
@@ -9,7 +9,7 @@
         </dd>
         <dd class="govuk-summary-list__actions">
             <a href="{{ changeLinkUrl }}" class="govuk-link">
-                Change
+                {{ _('Change') }}
                 <span class="govuk-visually-hidden">
                     {{ changeLinkHiddenText }}
                 </span>
