--- a/grc/templates/partnership-details/current-check.html
+++ b/grc/templates/partnership-details/current-check.html
@@ -37,7 +37,7 @@
                             'htmlOrText': _('If you are in the process of ending, or you plan to end your marriage or civil partnership, you should select your current, legal status')
                         },
                         'dividerOptions': [
-                            ('Neither', _('or'))
+                            ('NEITHER', _('or'))
                         ]
                     }
                 ) }}
