change english typo

--- a/grc/templates/partnership-details/current-check.html
+++ b/grc/templates/partnership-details/current-check.html
@@ -34,7 +34,7 @@
                     radiosOptions={
                         'questionClasses': 'govuk-fieldset__legend--m',
                         'hintOptions':{
-                            'htmlOrText': _('If you are in the process of ending, or you plan to end your marriage or civil partnership, you should select your current, legal status')
+                            'htmlOrText': _('If you are in the process of ending, or you plan to end your marriage or civil partnership, you should select your current legal status')
                         },
                         'dividerOptions': [
                             ('NEITHER', _('or'))
