--- a/grc/templates/partnership-details/interim-check.html
+++ b/grc/templates/partnership-details/interim-check.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Interim Gender Recognition Certificate{% endblock %}
+{% block title %}{{ _('Interim Gender Recognition Certificate') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderForRawURL(back) }}
 {% endblock %}
 
 {% block content %}
@@ -12,44 +14,29 @@
 
             <div class="interuption-card">
                 <h1 class="govuk-heading-l">
-                    Interim Gender Recognition Certificate
+                    {{ _('Interim Gender Recognition Certificate') }}
                 </h1>
 
-                {%  set partnerName = 'civil partner'
-                    if application_data.partnership_details_data.is_in_civil_partnership
-                    else 'spouse' %}
-                {%  set partnershipName = 'civil partnership'
-                    if application_data.partnership_details_data.is_in_civil_partnership
-                    else 'marriage' %}
-                {%  set inPartnershipName = 'in a civil partnership'
-                    if application_data.partnership_details_data.is_in_civil_partnership
-                    else 'married' %}
-
                 <p class="govuk-body">
-                    When you apply for a certificate, your {{ partnerName }} needs to
-                    sign a document if you want to stay {{ inPartnershipName }}.
+                    {{ context.interim_p1 }}
                 </p>
                 <p class="govuk-body">
-                    If they do not sign the document, or you’re ending the {{ partnershipName }},
-                    you will get an ‘interim’ certificate if you continue with your application.
+                    {{ context.interim_p2 }}
                 </p>
                 <p class="govuk-body">
-                    You can only use the interim certificate to end your {{ partnershipName }}.
+                    {{ context.interim_p3 }}
                 </p>
                 <p class="govuk-body">
-                    You have 6 months to apply for an annulment, divorce or dissolution
-                    from when you get your interim certificate.
+                   {{ context.interim_p4 }}
                 </p>
                 <p class="govuk-body govuk-!-margin-bottom-8">
-                    You will get a full certificate once you’re no longer {{ inPartnershipName }}.
+                    {{ context.interim_p5 }}
                 </p>
 
                 <form method="POST" action="#">
                     {{ form.csrf_token }}
 
-                    <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">
-                        Continue
-                    </button>
+                    {{ continue.renderFor() }}
                 </form>
             </div>
 
