--- a/grc/templates/upload/medical-reports.html
+++ b/grc/templates/upload/medical-reports.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "upload/_upload-files-section.html" as upload_files_section %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Upload your medical reports{% endblock %}
+{% block title %}{{ _('Upload your medical reports') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('taskList.index') }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderFor('taskList.index') }}
 {% endblock %}
 
 {% block content %}
@@ -15,39 +17,41 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Upload your medical reports
+                {{ _('Upload your medical reports') }}
             </h1>
             <p class="govuk-body">
-                This is where you can upload your 2 medical reports.
+                {{ _('This is where you can upload your 2 medical reports.') }}
             </p>
             <p class="govuk-body">
-                Find out more about the
+                {{ _('Find out more about the') }}
                 <a href="https://www.gov.uk/apply-gender-recognition-certificate/what-documents-you-need#medical-reports-from-the-uk"
                    target="_blank" class="govuk-link">
-                    medical reports you need (opens in new tab)</a>.
+                    {{ _('medical reports you need (opens in new tab)') }}
+                </a>.
             </p>
             <p class="govuk-body">
-                You must upload a scan or good quality photograph of the whole medical report.
-                If the report is longer than one page, you must upload every page.
+                {{ _('You must upload a scan or good quality photograph of the whole medical report.') }}
+                {{ _('If the report is longer than one page, you must upload every page.') }}
             </p>
             <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
                 <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    We will only accept clear images of full pages.
-                    If you take a photograph, please make sure all 4 corners of each page are visible.
+                    <span class="govuk-warning-text__assistive">{{ _('Warning') }}</span>
+                    {{ _('We will only accept clear images of full pages.') }}
+                    {{ _('If you take a photograph, please make sure all 4 corners of each page are visible.') }}
                 </strong>
             </div>
             <p class="govuk-body">
-                We process and protect all documents you upload in accordance with our
+                {{ _('We process and protect all documents you upload in accordance with our') }}
                 <a href="{{ url_for('policies.privacy_policy') }}"
                    target="_blank" class="govuk-link">
-                    privacy policy (opens in a new tab)</a>.
+                    {{ _('privacy policy (opens in a new tab)') }}
+                </a>.
             </p>
 
             {% macro extra_upload_hint() %}
                 <p class="govuk-body">
-                    Please upload the files in page order if you can.
+                    {{ _('Please upload the files in page order if you can.') }}
                 </p>
             {%- endmacro %}
 
@@ -58,7 +62,8 @@
                 currently_uploaded_files=currently_uploaded_files,
                 section_url=section_url,
                 duplicate_aws_file_names=duplicate_aws_file_names,
-                extra_upload_hint=extra_upload_hint)
+                extra_upload_hint=extra_upload_hint,
+                lang_code=lang_code)
             }}
 
         </div>
