--- a/grc/templates/upload/_upload-files-section.html
+++ b/grc/templates/upload/_upload-files-section.html
@@ -1,21 +1,21 @@
-{% macro render(form, deleteform, deleteAllFilesInSectionForm, currently_uploaded_files, section_url, duplicate_aws_file_names, extra_upload_hint) %}
+{% macro render(form, deleteform, deleteAllFilesInSectionForm, currently_uploaded_files, section_url, duplicate_aws_file_names, extra_upload_hint, lang_code='en') %}
     <div id="file-upload-section" class="govuk-!-margin-top-8">
         {% if duplicate_aws_file_names %}
             <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
                 <h2 class="govuk-error-summary__title" id="error-summary-title">
-                    There is a problem
+                    {{ _('There is a problem') }}
                 </h2>
 
                 <div class="govuk-error-summary__body">
                     <p class="govuk-list govuk-error-summary__list">
-                        The upload failed. Please remove your files and re-upload.
+                        {{ _('The upload failed. Please remove your files and re-upload.') }}
                     </p>
                 </div>
 
                 <form method="POST" action="{{ url_for('upload.removeAllFilesInSection', section_url=section_url) }}#file-upload-section">
                     <input type="hidden" name="csrf_token" value="{{ deleteAllFilesInSectionForm.get_csrf_token() }}">
                     <button class="govuk-button govuk-button--warning govuk-!-margin-bottom-0" data-module="govuk-button">
-                        Remove all files
+                        {{ _('Remove all files') }}
                     </button>
                 </form>
             </div>
@@ -23,7 +23,7 @@
 
         {% if currently_uploaded_files %}
             <h2 class="govuk-heading-m">
-                Uploaded files
+                {{ _('Uploaded files') }}
             </h2>
 
             <dl class="govuk-summary-list govuk-!-margin-bottom-8">
@@ -47,7 +47,7 @@
 
                                     <input type="hidden" name="file" value="{{ evidence_file.aws_file_name }}">
                                     <button class="govuk-button govuk-button--warning govuk-!-margin-bottom-0" data-module="govuk-button">
-                                        Remove file
+                                        {{ _('Remove file') }}
                                         <span class="govuk-visually-hidden">
                                             {{ evidence_file.original_file_name }}
                                         </span>
@@ -63,8 +63,12 @@
                 {% if currently_uploaded_files | selectattr('password_required', 'equalto', true) | list | length > 0 %}
                 <p>
                     {{ currently_uploaded_files | selectattr('password_required', 'equalto', true) | list | length }}
-                    {% if currently_uploaded_files | selectattr('password_required', 'equalto', true) | list | length == 1 %}file is{% else %}files are{% endif %} password protected.
-                    <a href="{{ url_for('upload.documentPassword', section_url=section_url) }}" class="gov-link">Click here to manage passwords</a>.
+                    {% if currently_uploaded_files | selectattr('password_required', 'equalto', true) | list | length == 1 %}
+                        {{ _('file is password protected') }}
+                    {% else %}
+                        {{ _('files are password protected') }}
+                    {% endif %}.
+                    <a href="{{ url_for('upload.documentPassword', section_url=section_url) }}" class="gov-link">{{ _('Click here to manage passwords') }}</a>.
                 </p>
                 {% endif %}
             </dl>
@@ -77,10 +81,10 @@
 
                 <div class="govuk-form-group {{ 'govuk-form-group--error' if form.errors }} govuk-!-margin-bottom-2">
                     <label for="documents" class="govuk-label govuk-label--m">
-                        Upload files
+                        {{ _('Upload files') }}
                     </label>
                     <div id="documents-hint" class="govuk-hint">
-                        The files must be a JPG, BMP, PNG, TIF or PDF and be smaller than 10MB
+                        {{ _('The files must be a JPG, BMP, PNG, TIF or PDF and be smaller than 10MB') }}
                     </div>
                     {% if extra_upload_hint %}
                         <div id="extra-upload-hint">
@@ -91,7 +95,7 @@
                         <p id="documents-error" class="govuk-error-message">
                             {% for error in form.errors %}
                                 {% for e in form[error].errors %}
-                                    <span class="govuk-visually-hidden">Error:</span> {{ e }}
+                                    <span class="govuk-visually-hidden">{{ _('Error:') }}</span> {{ e }}
                                 {% endfor %}
                             {% endfor %}
                         </p>
@@ -103,40 +107,54 @@
                            accept=".jpg,.jpeg,.bmp,.png,.tif,.tiff,.pdf"
                            class="govuk-file-upload govuk-!-margin-bottom-4 {{ 'govuk-input--error' if form.documents.errors }}"
                            aria-describedby="documents-hint{{ (' ' + 'extra-upload-hint') if extra_upload_hint else '' }}"
-                           onchange="checkFile(event)">
+                           onchange="checkFile(event, '{{ lang_code }}')">
                 </div>
-                <button id="submit" type="submit" name="button_clicked" value="Upload file" class="govuk-button" data-module="govuk-button">
-                    Upload file
+                <button id="submit" type="submit" name="button_clicked" value="UPLOAD_FILE" class="govuk-button" data-module="govuk-button">
+                    {{ _('Upload file') }}
                 </button>
 
                 {% if currently_uploaded_files != [] %}
                     <p class="govuk-body govuk-!-margin-top-5">
-                        Once you have uploaded all your files, click the "Save and continue" button
+                        {{ _('Once you have uploaded all your files, click the "Save and continue" button') }}
                     </p>
                 {% endif %}
 
                 <div class="govuk-button-group">
                     {% if currently_uploaded_files != [] %}
-                        <input type="submit" name="button_clicked" value="Save and continue" class="govuk-button" data-module="govuk-button">
+                        <button id="saveAndContinue" type="submit" name="button_clicked" value="SAVE_AND_CONTINUE" class="govuk-button" data-module="govuk-button">
+                            {{ _('Save and continue') }}
+                        </button>
                     {% endif %}
                     <a href="{{ url_for('taskList.index') }}" class="govuk-link govuk-link--no-visited-state">
-                        Return to task list
+                        {{ _('Return to task list') }}
                     </a>
                 </div>
             </form>
         {% else %}
             <p class="govuk-body">
                 <a href="{{ url_for('taskList.index') }}" class="govuk-link govuk-link--no-visited-state">
-                    Return to task list
+                    {{ _('Return to task list') }}
                 </a>
             </p>
         {% endif %}
 
         <script>
-        async function checkFile(event) {
-            document.getElementById('submit').innerText = 'Upload file'
+        async function checkFile(event, language='en') {
+            let submitButtonText = 'Upload file'
+            let uploadText = 'Upload'
+            let singleFileText = 'file'
+            let multiFilesText = 'files'
+
+            if (language === 'cy') {
+               submitButtonText = 'Uwchlwytho ffeil'
+               uploadText = 'Uwchlwytho'
+               singleFileText = 'ffeil'
+               multiFilesText = 'ffeiliau'
+            }
+
+            document.getElementById('submit').innerText = submitButtonText
             if (event.target.files.length > 0) {
-                document.getElementById('submit').innerText = `Upload ${event.target.files.length} ${event.target.files.length == 1 ? 'file' : 'files'}`
+                document.getElementById('submit').innerText = `${uploadText} ${event.target.files.length} ${event.target.files.length == 1 ? singleFileText : multiFilesText}`
             }
         }
         </script>
