--- a/grc/templates/base.html
+++ b/grc/templates/base.html
@@ -102,12 +102,12 @@
                             <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
                                 <div class="govuk-notification-banner__header">
                                     <h2 id="govuk-notification-banner-title" class="govuk-notification-banner__title">
-                                        Success
+                                        {{ _('Success') }}
                                     </h2>
                                 </div>
                                 <div class="govuk-notification-banner__content">
                                     <h3 class="govuk-notification-banner__heading">
-                                        Email resent
+                                        {{ _('Email resent') }}
                                     </h3>
                                     {%- for msg in messages %}
                                         <p class="govuk-body">{{ msg }}</p>
