add missing trans

--- a/grc/templates/base.html
+++ b/grc/templates/base.html
@@ -154,17 +154,17 @@
                     <ul class="govuk-footer__inline-list">
                         <li class="govuk-footer__inline-list-item">
                             <a class="govuk-footer__link" href="{{ url_for('policies.privacy_policy') }}">
-                                Privacy policy
+                                {{ _('Privacy policy') }}
                             </a>
                         </li>
                         <li class="govuk-footer__inline-list-item">
                             <a class="govuk-footer__link" href="{{ url_for('policies.accessibility_statement') }}">
-                                Accessibility statement
+                                {{ _('Accessibility statement') }}
                             </a>
                         </li>
                         <li class="govuk-footer__inline-list-item">
                             <a class="govuk-footer__link" href="{{ url_for('policies.cookies') }}">
-                                Cookies
+                                {{ _('Cookies') }}
                             </a>
                         </li>
                     </ul>
