--- a/grc/templates/upload/evidence.html
+++ b/grc/templates/upload/evidence.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "upload/_upload-files-section.html" as upload_files_section %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
 
-{% block title %}Upload evidence of living in your gender{% endblock %}
+{% block title %}{{ _('Upload evidence of living in your gender') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('taskList.index') }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderFor('taskList.index') }}
 {% endblock %}
 
 {% block content %}
@@ -15,45 +16,35 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Upload evidence of living in your gender
+                {{ _('Upload evidence of living in your gender') }}
             </h1>
             <p class="govuk-body">
-                This is where you can upload evidence to show you’ve been living in your affirmed gender for the last 2 years.
+                {{ _('This is where you can upload evidence to show you’ve been living in your affirmed gender for the last 2 years.') }}
             </p>
             <p class="govuk-body">
-                For example, if you submit your application today, you will need evidence from
+                {{ ('For example, if you submit your application today, you will need evidence from') }}
                 {{ date_two_years_ago.strftime('%B %Y') }}
-                to
+                {{ ('to') }}
                 {{ date_now.strftime('%B %Y') }}.
             </p>
             <p class="govuk-body">
-                Find out more about the
-                <a href="https://www.gov.uk/apply-gender-recognition-certificate/what-documents-you-need#evidence-of-living-in-your-gender-for-the-last-2-years"
-                   target="_blank" class="govuk-link">
-                    evidence of living in your gender you need (opens in new tab)</a>.
+                {{ _('Find out more about the') }}
+                <a href="https://www.gov.uk/apply-gender-recognition-certificate/what-documents-you-need#evidence-of-living-in-your-gender-for-the-last-2-years" target="_blank" class="govuk-link">
+                    {{ _('evidence of living in your gender you need (opens in new tab)') }}
+                </a>.
             </p>
             <p class="govuk-body">
-                Please upload a scan or good quality photograph of each piece of evidence.
+                {{ _('Please upload a scan or good quality photograph of each piece of evidence.') }}
             </p>
-            <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
-                <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    We will only accept clear images.
-                    If you take a photograph of a letter or statement, please make sure all 4 corners of each page are visible.
-                </strong>
-            </div>
-            <p class="govuk-body">
-                We process and protect all documents you upload in accordance with our
-                <a href="{{ url_for('policies.privacy_policy') }}"
-                target="_blank" class="govuk-link">
-                    privacy policy (opens in a new tab)</a>.
-            </p>
+
+            {{ upload_files_section.renderWarning }}
+
+            {{ upload_files_section.renderPrivacyPolicyStatement }}
 
             {% macro extra_upload_hint() %}
                 <div class="govuk-inset-text">
-                    Do not upload more than 4 pieces of evidence for each year.
-                    Do not upload a document you have already submitted, such as a medical report.
+                    {{ _('Do not upload more than 4 pieces of evidence for each year.') }}
+                    {{ _('Do not upload a document you have already submitted, such as a medical report.') }}
                 </div>
             {%- endmacro %}
 
