--- a/grc/templates/upload/_upload-files-section.html
+++ b/grc/templates/upload/_upload-files-section.html
@@ -161,7 +161,7 @@
     </div>
 {% endmacro %}
 
-{% macro renderWarning %}
+{% macro renderWarning() %}
 <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
     <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
     <strong class="govuk-warning-text__text">
@@ -172,7 +172,7 @@
 </div>
 {% endmacro %}
 
-{% macro renderPrivacyPolicyStatement %}
+{% macro renderPrivacyPolicyStatement() %}
 <p class="govuk-body">
     {{ _('We process and protect all documents you upload in accordance with our') }}
     <a href="{{ url_for('policies.privacy_policy') }}" target="_blank" class="govuk-link">
