--- a/grc/templates/upload/medical-reports.html
+++ b/grc/templates/upload/medical-reports.html
@@ -33,9 +33,9 @@
                 {{ _('If the report is longer than one page, you must upload every page.') }}
             </p>
 
-            {{ upload_files_section.renderWarning }}
+            {{ upload_files_section.renderWarning() }}
 
-            {{ upload_files_section.renderPrivacyPolicyStatement }}
+            {{ upload_files_section.renderPrivacyPolicyStatement() }}
 
             {% macro extra_upload_hint() %}
                 <p class="govuk-body">
