--- a/grc/templates/upload/_upload-files-section.html
+++ b/grc/templates/upload/_upload-files-section.html
@@ -160,3 +160,23 @@
         </script>
     </div>
 {% endmacro %}
+
+{% macro renderWarning() %}
+<div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
+    <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
+    <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">{{ _('Warning') }}</span>
+        {{ _('We will only accept clear images of full pages.') }}
+        {{ _('If you take a photograph, please make sure all 4 corners of each page are visible.') }}
+    </strong>
+</div>
+{% endmacro %}
+
+{% macro renderPrivacyPolicyStatement() %}
+<p class="govuk-body">
+    {{ _('We process and protect all documents you upload in accordance with our') }}
+    <a href="{{ url_for('policies.privacy_policy') }}" target="_blank" class="govuk-link">
+        {{ _('privacy policy (opens in a new tab)') }}
+    </a>.
+</p>
+{% endmacro %}
