--- a/grc/templates/upload/statutory-declarations.html
+++ b/grc/templates/upload/statutory-declarations.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "upload/_upload-files-section.html" as upload_files_section %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
 
-{% block title %}Statutory declarations documents{% endblock %}
+{% block title %}{{ _('Statutory declarations documents') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('taskList.index') }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderFor('taskList.index') }}
 {% endblock %}
 
 {% block content %}
@@ -15,50 +16,37 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Statutory declarations documents
+                {{ _('Statutory declarations documents') }}
             </h1>
             <p class="govuk-body">
-                This is where you can upload copies of all required statutory declarations.
+                {{ _('This is where you can upload copies of all required statutory declarations.') }}
             </p>
             <p class="govuk-body govuk-!-margin-bottom-2">
-                You must upload either:
+                {{ _('You must upload either:') }}
             </p>
             <ul class="govuk-list govuk-list--bullet">
-                <li>a statutory declaration for single applicants</li>
-                <li>a statutory declaration for applicants who are married or in a civil partnership</li>
+                <li>{{ _('a statutory declaration for single applicants') }}</li>
+                <li>{{ _('a statutory declaration for applicants who are married or in a civil partnership') }}</li>
             </ul>
             <p class="govuk-body">
-                If you fill out the statutory declaration for applicants who are married or in a civil partnership
+                {{ _('If you fill out the statutory declaration for applicants who are married or in a civil partnership
                 and you intend to stay in that marriage or civil partnership after you receive a certificate,
-                you must also upload a statutory declaration signed by your spouse or civil partner.
+                you must also upload a statutory declaration signed by your spouse or civil partner.') }}
             </p>
             <p class="govuk-body">
-                Follow the
+                {{ _('Follow the') }}
                 <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-statutory-declarations-for-applicants"
                    target="_blank" class="govuk-link">
-                    guidance on statutory declarations (opens in a new tab)
+                    {{ _('guidance on statutory declarations (opens in a new tab)') }}
                 </a>
-                to find out which declaration is right for you and who can act as a witness when you sign your declaration.
-            </p>
-            <p class="govuk-body">
-                You must upload a scan or good quality photograph of your documents.
-                If the document is longer than one page, you must upload every page.
-            </p>
-            <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
-                <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    We will only accept clear images of full pages.
-                    If you take a photograph, please ensure all 4 corners of each page are visible.
-                </strong>
-            </div>
-            <p class="govuk-body">
-                We process and protect all documents you upload in accordance with our
-                <a href="{{ url_for('policies.privacy_policy') }}"
-                target="_blank" class="govuk-link">
-                    privacy policy (opens in a new tab)</a>.
+                {{ _('to find out which declaration is right for you and who can act as a witness when you sign your declaration.') }}
             </p>
 
+            {{ upload_files_section.renderGoodQualityStatement() }}
+
+            {{ upload_files_section.renderWarning() }}
+
+            {{ upload_files_section.renderPrivacyPolicyStatement() }}
 
             {{ upload_files_section.render(
                 form,
@@ -66,7 +54,8 @@
                 deleteAllFilesInSectionForm,
                 currently_uploaded_files=currently_uploaded_files,
                 section_url=section_url,
-                duplicate_aws_file_names=duplicate_aws_file_names)
+                duplicate_aws_file_names=duplicate_aws_file_names,
+                lang_code=lang_code)
             }}
 
         </div>
