--- a/grc/templates/upload/overseas-certificate.html
+++ b/grc/templates/upload/overseas-certificate.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "upload/_upload-files-section.html" as upload_files_section %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
 
-{% block title %}Overseas gender recognition certificate documents{% endblock %}
+{% block title %}{{ _('Overseas gender recognition certificate documents') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('taskList.index') }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderFor('taskList.index') }}
 {% endblock %}
 
 {% block content %}
@@ -15,35 +16,23 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Overseas gender recognition certificate documents
+                {{ _('Overseas gender recognition certificate documents') }}
             </h1>
             <p class="govuk-body">
-                This is where you can upload copies of your overseas gender recognition certificate documents.
+                {{ _('This is where you can upload copies of your overseas gender recognition certificate documents.') }}
             </p>
             <p class="govuk-body">
-                Find out more about documents you can submit
+                {{ _('Find out more about documents you can submit') }}
                 <a href="https://www.gov.uk/apply-gender-recognition-certificate/what-documents-you-need#if-youre-on-the-overseas-route"
                    target="_blank" class="govuk-link">
-                    if you’re on the overseas route (opens in new tab)</a>.
+                    {{ _('if you’re on the overseas route (opens in new tab)') }}
+                </a>.
             </p>
-            <p class="govuk-body">
-                You must upload a scan or good quality photograph of your documents.
-                If the document is longer than one page, you must upload every page.
-            </p>
-            <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
-                <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    We will only accept clear images of full pages.
-                    If you take a photograph, please ensure all 4 corners of each page are visible.
-                </strong>
-            </div>
-            <p class="govuk-body">
-                We process and protect all documents you upload in accordance with our
-                <a href="{{ url_for('policies.privacy_policy') }}"
-                target="_blank" class="govuk-link">
-                    privacy policy (opens in a new tab)</a>.
-            </p>
+            {{ upload_files_section.renderGoodQualityStatement() }}
+
+            {{ upload_files_section.renderWarning() }}
+
+            {{ upload_files_section.renderPrivacyPolicyStatement() }}
 
             {{ upload_files_section.render(
                 form,
@@ -51,7 +40,8 @@
                 deleteAllFilesInSectionForm,
                 currently_uploaded_files=currently_uploaded_files,
                 section_url=section_url,
-                duplicate_aws_file_names=duplicate_aws_file_names)
+                duplicate_aws_file_names=duplicate_aws_file_names,
+                lang_code=lang_code)
             }}
 
         </div>
