--- a/grc/templates/upload/marriage-documents.html
+++ b/grc/templates/upload/marriage-documents.html
@@ -40,7 +40,8 @@
                 deleteAllFilesInSectionForm,
                 currently_uploaded_files=currently_uploaded_files,
                 section_url=section_url,
-                duplicate_aws_file_names=duplicate_aws_file_names)
+                duplicate_aws_file_names=duplicate_aws_file_names,
+                lang_code=lang_code)
             }}
 
         </div>
