--- a/grc/templates/upload/marriage-documents.html
+++ b/grc/templates/upload/marriage-documents.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "upload/_upload-files-section.html" as upload_files_section %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
 
-{% block title %}Upload marriage or civil partnership documents{% endblock %}
+{% block title %}{{ _('Upload marriage or civil partnership documents') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('taskList.index') }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderFor('taskList.index') }}
 {% endblock %}
 
 {% block content %}
@@ -15,35 +16,23 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Upload marriage or civil partnership documents
+                {{ _('Upload marriage or civil partnership documents') }}
             </h1>
             <p class="govuk-body">
-                This is where you can upload copies of your marriage or civil partnership documents.
+                {{ _('This is where you can upload copies of your marriage or civil partnership documents.') }}
             </p>
             <p class="govuk-body">
-                Find out more about the
+                {{ _('Find out more about the') }}
                 <a href="https://www.gov.uk/apply-gender-recognition-certificate/what-documents-you-need#if-youve-ever-been-married-or-been-in-a-civil-partnership"
                    target="_blank" class="govuk-link">
-                    documents you need if you’ve ever been married or in a civil partnership (opens in new tab)</a>.
+                    {{ _('documents you need if you’ve ever been married or in a civil partnership (opens in new tab)') }}
+                </a>.
             </p>
-            <p class="govuk-body">
-                You must upload a scan or good quality photograph of your documents.
-                If any documents are longer than one page, you must upload every page.
-            </p>
-            <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
-                <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    We will only accept clear images of full pages.
-                    If you take a photograph, please ensure all 4 corners of each page are visible.
-                </strong>
-            </div>
-            <p class="govuk-body">
-                We process and protect all documents you upload in accordance with our
-                <a href="{{ url_for('policies.privacy_policy') }}"
-                target="_blank" class="govuk-link">
-                    privacy policy (opens in a new tab)</a>.
-            </p>
+            {{ upload_files_section.renderGoodQualityStatement() }}
+
+            {{ upload_files_section.renderWarning() }}
+
+            {{ upload_files_section.renderPrivacyPolicyStatement() }}
 
             {{ upload_files_section.render(
                 form,
@@ -51,7 +40,8 @@
                 deleteAllFilesInSectionForm,
                 currently_uploaded_files=currently_uploaded_files,
                 section_url=section_url,
-                duplicate_aws_file_names=duplicate_aws_file_names)
+                duplicate_aws_file_names=duplicate_aws_file_names,
+                lang_code=lang_code)
             }}
 
         </div>
